--- a/machine learning1/KMeans.ipynb
+++ b/machine learning1/KMeans.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = pd.read_csv(\"/Users/betulsamanci/Desktop/Mall_Customers.csv\")"
+    "dataset = pd.read_csv(\"C:/Users/Ertuğrul Korkmaz/1Machine Learning - Python/Mall_Customers.csv\")"
    ]
   },
   {
