--- a/machine learning1/RandomForest.ipynb
+++ b/machine learning1/RandomForest.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data=pd.read_csv(\"C:/Users/Ertuğrul Korkmaz/1Machine Learning - Python/data (7).csv\")"/
+    "data=pd.read_csv("C:\Users\Ertuğrul Korkmaz\1Machine Learning - Python\data (7).csv")"
    ]
   },
   {
