--- a/machine learning1/DecisionTree1.ipynb
+++ b/machine learning1/DecisionTree1.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = pd.read_csv(\"/Users/betulsamanci/Downloads/mushrooms.csv\")"
+    "dataset = pd.read_csv(\"C:\Users\Ertuğrul Korkmaz\1Machine Learning - Python/mushrooms.csv\")"
    ]
   },
   {
